--- a/style.css
+++ b/style.css
@@ -134,15 +134,26 @@ main h3 {
 }
 
 .point-down {
-  position: relative;
-  left: 45%;
-  top: 225px;
-  font-size: 35px;
-  color: #fff;
-  border: 1px solid #fff;
+  font-size: 22px;
+  color: rgb(255, 0, 0);
+  margin-top: 15%;
   padding: 10px;
-  border-radius: 50%;
-  background-color: #86b8c8;
+  animation-name: pointer;
+  animation-timing-function: ease-in-out;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes pointer {
+  from {
+    color: rgb(255, 255, 255);
+    margin-top: 15%;
+  }
+  to {
+    color: rgb(255, 136, 0);
+    margin-top: 13%;
+}
 }
 
 .what-i-use {
@@ -152,8 +163,8 @@ main h3 {
   -moz-border-radius: 102px 0px 102px 0px;
   -webkit-border-radius: 102px 0px 102px 0px;
   border: 1px solid #d8dfe5;
-  margin-top: 30px;
-  padding-left: 12%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .html {
@@ -165,14 +176,24 @@ main h3 {
 }
 
 .js {
-  color: #ffc107;
+  color: rgb(255, 136, 0);
 }
-.my-work,
-h3 {
-  margin-bottom: 30px;
+
+.whatiuse-bg-color {
+  background-color:rgb(133, 183, 199);;
+}
+
+.whatiuse-bg-color h3 {
+  font-weight: 300;
+}
+.my-work{
+  background-color: rgb(133, 183, 199);
+}
+.my-work h3 {
+  margin-bottom: 15px;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  margin-top: 15px;
+  color: #fff;
 }
 
 .site1 img {
@@ -206,6 +227,17 @@ h3 {
 .button-live {
   color: #fff;
   margin-right: 10px;
+  text-transform: uppercase;
+  background-color: rgba(255, 54, 54, 0.8);
+  transition: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+}
+
+.button-live-reverse {
+  color: #fff;
+  margin-left: 10px;
   text-transform: uppercase;
   background-color: rgba(255, 54, 54, 0.8);
   transition: all 0.3s ease-in;
@@ -312,12 +344,6 @@ textarea {
 }
 
 @media (max-width: 414px) {
-  .thought {
-    
-  }
-}
-
-@media (max-width: 414px) {
   .site1 h4 {
     padding-top: 10%;
   }
@@ -328,21 +354,12 @@ textarea {
     background-color: #d8dfe5;
     border: 1px solid #d8dfe5;
     margin-top: 30px;
-    padding-left: 33%;
   }
 }
 
 @media (max-width: 414px) {
   .point-div-size {
     height: 100px;
-  }
-  .point-down {
-    position: relative;
-    left: 45%;
-    top: 100px;
-    font-size: 35px;
-    padding: 10px;
-    border-radius: 50%;
   }
 }
 /*Media queries*/
