--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Meie+Script&display=swap');
 
-/*Header ++ Home Page*/
+/*Header + Home Page*/
 html,
 body,
 main,
@@ -89,10 +89,10 @@ header,
 .main-title-quote p {
   font-family: "Meie Script", sans-serif;
   margin-top: 30px;
-  font-size: 19px;
+  font-size: 23px;
 }
 
-/*Header ++ Home Page*/
+/*Header + Home Page*/
 
 /*About*/
 
@@ -102,6 +102,10 @@ header,
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.aboutme-mt {
+  margin-top: 70px;
 }
 
 .about-me-text {
@@ -126,7 +130,7 @@ main h3 {
   top: 40%;
   font-family: "Meie Script", sans-serif;
   letter-spacing: 1px;
-  font-size: 19px;
+  font-size: 23px;
 }
 
 .point-div-size {
@@ -147,11 +151,11 @@ main h3 {
 
 @keyframes pointer {
   from {
-    color: rgb(255, 255, 255);
+    color: rgb(255, 136, 0);
     margin-top: 15%;
   }
   to {
-    color: rgb(255, 136, 0);
+    color: rgb(255, 255, 255);
     margin-top: 13%;
 }
 }
@@ -203,9 +207,14 @@ main h3 {
 }
 
 .site1 {
-  background-color: rgb(202, 208, 220);
+  background-color: rgb(204, 204, 204);
   padding: 20px 0;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
+}
+
+.creativity-bg {
+  background-color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 .site1 h4 {
@@ -278,11 +287,15 @@ main h3 {
 
 .contact-position {
   margin-top: 130px;
+  margin-left: 19px;
+  color: #fff;
+  font-weight: 300;
 }
 
 textarea.form-control {
-  min-height: 180px;
-  width: 340px;
+    min-height: 180px;
+    max-width: 500px;
+    min-width: 340px;
 }
 
 textarea {
@@ -292,7 +305,6 @@ textarea {
 
 .contact-main {
   margin: 0;
-  padding: 0;
 }
 
 .form-input {
@@ -310,6 +322,15 @@ textarea {
   background-color: silver;
 }
 /*Contact page*/
+
+/*Footer*/
+
+.footer-bg-color {
+  background-color: rgb(36, 36, 36);
+  height: 50px;
+}
+
+/*Footer*/
 
 /*Media queries*/
 
